# anti-churn

backend/: .env.example  Dockerfile  alembic.ini  pyproject.toml
backend/app/: config.py  database.py  main.py
backend/app/api/: deps.py  router.py
backend/app/api/v1/: events.py  health.py  users.py
backend/app/core/: exceptions.py  security.py
backend/app/models/: __init__.py  base.py  event.py  tenant.py  user.py
backend/app/schemas/: common.py  event.py  user.py
backend/app/services/: event_service.py  user_service.py
backend/migrations/: env.py
backend/tests/: conftest.py  test_health.py
